scrollbar fixed, & additional improved text

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,12 @@
 html {
   scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar {
+  width: 8px; /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0EA5E9; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+}
